src/assets/css/form.css
@utility form-input {
	@apply block w-full rounded-md px-3 py-2 text-grey-700 shadow-xs outline-hidden;
	@apply dark:bg-transparent;
}

@utility form-select {
	@apply block w-full appearance-none rounded-md py-2 ps-3 pe-[2.5em] text-grey-700 shadow-xs outline-hidden;
	@apply dark:bg-transparent;

	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2364748b' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
	background-position: right 0.5rem center;
	background-repeat: no-repeat;
	background-size: 1.5em 1.5em;

	@variant dark {
		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23ffffff40' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
	}

	.form-field--error & {
		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23dc2625' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");

		@variant dark {
			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23fda5a5' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
		}
	}
}

@utility form-checkbox {
	@apply mt-0.5 size-4 shrink-0 appearance-none rounded-sm outline-hidden ring-1 ring-grey-300 transition-all;
	@apply hover:ring-2 hover:ring-grey-500;
	@apply focus:ring-2 focus:ring-purple-800;
	@apply checked:bg-current checked:text-purple-800 checked:ring-current;
	@apply checked:focus:ring-offset-2;
	@apply dark:bg-white/20 dark:ring-white/30;
	@apply dark:hover:ring-white/50;
	@apply dark:focus:ring-purple-400;
	@apply dark:checked:text-purple-400 dark:checked:ring-current;
}

@utility form-radio {
	@apply size-4 appearance-none rounded-full outline-hidden ring-1 ring-grey-300 transition-all;
	@apply dark:bg-white/20 dark:ring-white/30;
	@apply hover:ring-2 hover:ring-grey-500;
	@apply focus:ring-2 focus:ring-purple-800;
	@apply checked:bg-current checked:text-purple-800 checked:ring-current;
	@apply checked:focus:ring-offset-2;
	@apply dark:hover:ring-white/50;
	@apply dark:focus:ring-purple-400;
	@apply dark:checked:text-purple-400 dark:checked:ring-current;
}

@utility button-group {
	@apply button--muted cursor-pointer rounded-none transition-all;
	@apply peer-focus:bg-grey-50 peer-focus:border-grey-400;
	@apply peer-focus:outline-hidden peer-focus:ring-2 peer-focus:ring-purple-800 peer-focus:ring-offset-2;
	@apply peer-checked:border-purple-800 peer-checked:bg-purple-800 peer-checked:text-white;
	@apply dark:bg-white/20 dark:border-white/20;
	@apply dark:peer-focus:bg-white/30 dark:peer-focus:border-white/20;
	@apply dark:peer-focus:ring-purple-400;
}

@utility button-group--first {
	@apply rounded-s-lg;
}

@utility button-group--middle {
	@apply border-s-0;
}

@utility button-group--last {
	@apply rounded-e-lg;
}

@utility form-field--error {
	@apply ring-red-600 dark:ring-red-300;
}

@layer components {
	[data-selector="form-field-wrapper"] {
		@apply ring-1 ring-grey-300 rounded-md;
		@apply dark:bg-white/20 dark:ring-white/30;

		&:has(:hover) {
			@apply ring-grey-400;
			@apply dark:ring-white/50;
		}

		&:has(:focus) {
			@apply ring-2 ring-purple-800;
			@apply dark:ring-purple-400;
		}
	}

	[data-selector="form-prefix"],
	[data-selector="form-suffix"] {
		@apply text-grey-500;
		@apply dark:text-grey-300;

		& > svg {
			@apply size-4 stroke-current;
		}
	}

	textarea {
		@apply min-h-40;

		field-sizing: content;
	}

	[type="checkbox"]:checked {
		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23FFF' d='m12.796 6.086-5.533 5.706a.675.675 0 0 1-.975 0l-3.086-3.2a.727.727 0 0 1 0-1.005l.861-.889a.675.675 0 0 1 .974 0l1.756 1.757 4.17-4.248a.675.675 0 0 1 .973 0l.86.869c.13.133.204.315.204.505s-.073.371-.204.505'/%3E%3C/svg%3E");
	}

	[type="radio"]:checked {
		background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
	}
}

